package simulation.strategieVente;

public interface StrategieVente {
    public boolean doitVendre(double depuis_vente);
}
